services/gateway/k8s/provider-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: provider-gateway
  namespace: tetral-system
  labels:
    app.kubernetes.io/name: provider-gateway
    app.kubernetes.io/part-of: tetral
spec:
  type: ClusterIP
  sessionAffinity: None
  selector:
    app.kubernetes.io/name: provider-gateway
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: provider-grpc
      port: 9090
      targetPort: provider-grpc
